fix text algin in films and media on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -959,6 +959,7 @@ input[type=email] {
 		}
 
 		.programs-d {
+			float: none;
 			text-align: center;
 			margin: auto;
 			padding-top: 50px;
@@ -1176,16 +1177,14 @@ input[type=email] {
 			padding: 40px;
 		}
 
-		.films {
+		.films li {
 			text-align: center;
 			line-height: 2em;
-			padding: 20px 50px 40px 50px;
 		}
 
-		.books {
+		.books li {
 			text-align: center;
 			line-height: 2em;
-			padding: 20px 50px 40px 50px;
 		}
 
 		/*Contact Us Page*/
